--- a/list_shop.html
+++ b/list_shop.html
@@ -202,287 +202,287 @@
     <li>
       <h3 class="kor">10 코르소 코모</h3>
       <p class="chn">钲艺廊</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="钲艺廊">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="钲艺廊">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">361°</h3>
       <p class="chn">361度</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="361度">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="361度">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">iapm</h3>
       <p class="chn">环贸 iapm 商场</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="环贸 iapm 商场">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="环贸 iapm 商场">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">ifc 몰</h3>
       <p class="chn">上海国金中心商场 Mall</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海国金中心商场 Mall">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海国金中心商场 Mall">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">K11</h3>
       <p class="chn">上海 K11购物艺术中心</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海 K11购物艺术中心">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海 K11购物艺术中心">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">XMJ 포토그래피</h3>
       <p class="chn">XMJ Photography</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="XMJ Photography">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="XMJ Photography">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">나시바오창</h3>
       <p class="chn">纳西宝藏</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="纳西宝藏">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="纳西宝藏">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">디즈니 플래그십 스토어</h3>
       <p class="chn">迪斯尼旗舰店</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="迪斯尼旗舰店">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="迪斯尼旗舰店">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">라오시먼 구완차청</h3>
       <p class="chn">老西门古玩茶城</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="老西门古玩茶城">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="老西门古玩茶城">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">래플스 시티</h3>
       <p class="chn">来福士广场</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="来福士广场">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="来福士广场">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">뤼주웡</h3>
       <p class="chn">绿竹翁</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="绿竹翁">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="绿竹翁">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">르웨광 센터</h3>
       <p class="chn">日月光中心</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="日月光中心">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="日月光中心">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">리구롱</h3>
       <p class="chn">丽古龙</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="丽古龙">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="丽古龙">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">릴몰</h3>
       <p class="chn">芮欧百货</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="芮欧百货">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="芮欧百货">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">막스 앤 스펜서</h3>
       <p class="chn">玛莎百货</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="玛莎百货">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="玛莎百货">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">메터스본위</h3>
       <p class="chn">美特斯邦威</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="美特斯邦威">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="美特斯邦威">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">모덩홍런</h3>
       <p class="chn">摩登红人</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="摩登红人">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="摩登红人">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">미니소</h3>
       <p class="chn">名创优品</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="名创优品">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="名创优品">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">바오다양 쇼핑센터</h3>
       <p class="chn">宝大祥青少年儿童购物中心</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="宝大祥青少年儿童购物中心">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="宝大祥青少年儿童购物中心">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">바이팡차좡</h3>
       <p class="chn">柏芳茶庄</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="柏芳茶庄">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="柏芳茶庄">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">브래드 앤 버터</h3>
       <p class="chn">面包黄油</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="面包黄油">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="面包黄油">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">블란 버니 티</h3>
       <p class="chn">布兰兔的茶</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="布兰兔的茶">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="布兰兔的茶">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">산글라스</h3>
       <p class="chn">叁眼镜</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="叁眼镜">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="叁眼镜">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">상하이 여인</h3>
       <p class="chn">上海女人</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海女人">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海女人">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">상하이 우샹더우</h3>
       <p class="chn">上海五香豆商店</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海五香豆商店">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海五香豆商店">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">상하이 제일백화점</h3>
       <p class="chn">上海市第一百货商店</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海市第一百货商店">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海市第一百货商店">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">상하이 제일식품상점</h3>
       <p class="chn">上海市第一食品商店</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海市第一食品商店">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海市第一食品商店">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">상하이 제일의약상점</h3>
       <p class="chn">上海市第一医药商店</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海市第一医药商店">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海市第一医药商店">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">상하이 패션 스토어</h3>
       <p class="chn">上海时装商店</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海时装商店">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海时装商店">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">상하이탕</h3>
       <p class="chn">上海滩</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海滩">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海滩">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">셰스타오즈</h3>
       <p class="chn">谢氏淘姿</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="谢氏淘姿">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="谢氏淘姿">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">슈퍼 히어로</h3>
       <p class="chn">超级英雄</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="超级英雄">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="超级英雄">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">신톈디 스타일</h3>
       <p class="chn">新天地时尚购物中心</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="新天地时尚购物中心">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="新天地时尚购物中心">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">어번 트라이브</h3>
       <p class="chn">城市山民</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="城市山民">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="城市山民">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">엠 앤 엠 월드</h3>
       <p class="chn">M豆巧克力世界</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="M豆巧克力世界">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="M豆巧克力世界">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">오쉬리</h3>
       <p class="chn">欧时力</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="欧时力">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="欧时力">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">와이원 서점</h3>
       <p class="chn">外文书店</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="外文书店">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="外文书店">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">우산 야시장</h3>
       <p class="chn">吴山夜市</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="吴山夜市">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="吴山夜市">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">융안 백화점</h3>
       <p class="chn">永安百货</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="永安百货">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="永安百货">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">이지디</h3>
       <p class="chn">烟纸店</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="烟纸店">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="烟纸店">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">자산 마켓</h3>
       <p class="chn">嘉善老市</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="嘉善老市">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="嘉善老市">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">정다광창</h3>
       <p class="chn">正大广场</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="正大广场">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="正大广场">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">젠 라이프 스토어</h3>
       <p class="chn">钲艺廊</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="钲艺廊">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="钲艺廊">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">징 리퍼블릭</h3>
       <p class="chn">共禾京品</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="共禾京品">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="共禾京品">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">참 카이저 향수 박물관</h3>
       <p class="chn">卡汶凯瑟气味博物馆</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="卡汶凯瑟气味博物馆">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="卡汶凯瑟气味博物馆">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">춘량주팡 술도가</h3>
       <p class="chn">纯粮酒坊</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="纯粮酒坊">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="纯粮酒坊">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">크리스털 갤러리아</h3>
       <p class="chn">晶品</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="晶品">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="晶品">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">탕스</h3>
       <p class="chn">唐诗</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="唐诗">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="唐诗">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">톈선밍차</h3>
       <p class="chn">天申茗茶</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="天申茗茶">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="天申茗茶">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">톈푸밍차</h3>
       <p class="chn">天福茗茶</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="天福茗茶">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="天福茗茶">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">티 가든</h3>
       <p class="chn">茗茶暗访</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="茗茶暗访">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="茗茶暗访">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">펑허수이</h3>
       <p class="chn">风和水</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="风和水">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="风和水">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">퓨어랜드</h3>
       <p class="chn">青蘭工舍</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="青蘭工舍">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="青蘭工舍">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">한이</h3>
       <p class="chn">瀚艺</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="瀚艺">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="瀚艺">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">핫윈드</h3>
       <p class="chn">热风</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="热风">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="热风">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">허쉬 초콜릿 월드</h3>
       <p class="chn">好时巧克力世界</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="好时巧克力世界">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="好时巧克力世界">중국어 복사</button></div>
     </li>
     <li>
       <h3 class="kor">후이춘탕</h3>
       <p class="chn">回春堂</p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="回春堂">한자복사</button></div>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="回春堂">중국어 복사</button></div>
     </li>
   </ul>
 
