--- a/list_place.html
+++ b/list_place.html
@@ -28,7 +28,8 @@
       overflow: hidden;
       background-color: #333;
       color: white;
-      padding: 15px 0px;
+      padding-top: 10px;
+      padding-bottom: 5px;
       text-decoration: none;
       display: block;
       text-align: center;
@@ -187,7 +188,7 @@
     <li class="gnbli"><a href="list_etc.html">숙소&스파&교통</a></li>
   </ul>
   <ul class="gnbfoot">
-    리얼 상하이
+    <img src="img/foot.png" width="200px" height="35px" />
   </ul>
 </div>
 
