--- a/list_food.html
+++ b/list_food.html
@@ -192,7 +192,7 @@
   </ul>
 </div>
 
-  <div id="users">
+  <div id="users" style="margin-bottom:55px;">
   <input class="search" placeholder="검색" />
   <button class="sort asc" data-sort="kor">
     가나다순 정렬
